[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.0"
handlebars = "4.3.6"
reqwest = { version = "0.11.14", features = ["json"] }
rusttype = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
svg = "0.12.1"
text-svg = "0.1.2"
tokio = { version = "1.25.0", features = ["full"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
