[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
ntex = { version = "0.6", features = ["glommio", "openssl"] }
openssl = "0.10.45"
rusttype = "0.9.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
svg = "0.12.1"
text-svg = "0.1.2"
